<resources>
    <string name="app_name"><b>MoneyFy</b></string>
    <string name="moneyfy"><b>MoneyFy</b></string>
    <string name="balance">Balance</string>
    <string name="tablas"><b>Tablas</b></string>
    <string name="Compra"><b>Compra</b></string>
    <string name="general"><b>General</b></string>
    <string name="ingresos"><b>Ingresos</b></string>
    <string name="gastos_minusculas"><b>Gastos</b></string>
    <string name="gastos_por_categoria"><b>Gastos Por Categoria</b></string>
    <string name="comida"><b>comida</b></string>
    <string name="ropa"><b>ropa</b></string>
    <string name="alquiler"><b>alquiler</b></string>
    <string name="otros"><b>otros</b></string>
    <string name="gastos_mensuales"><b>Gastos Mensuales</b></string>
    <string name="dolar">$</string>
    <string name="aceptar"><b>aceptar</b></string>
    <string name="Ingreso"><b>Ingreso</b></string>
    <string name="Gasto"><b>Gasto</b></string>
    <string name="signup"><b>signup</b></string>
    <string name="continuar"><b>continuar</b></string>
    <string name="login"><b>login</b></string>
    <string name="Password"><b>Password</b></string>
    <string name="Correo"><b>Correo</b></string>
    <string name="gastos">Gastos</string>
    <string name="welcome_back">Welcome Back</string>

</resources>