<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Tablas_activity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_medio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#9759EF"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fotodeperfil" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView_dolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:text="@string/dolar"
        android:textColor="#ffffff"
        android:textSize="45sp"
        app:layout_constraintRight_toRightOf="@+id/guideline_medio"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:text="68"
        android:textColor="#ffffff"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_medio"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="55dp"
        android:text="@string/tablas"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_tablas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:backgroundTint="#F16E1E"
        android:text="@string/tablas"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_gastos" />

    <Button
        android:id="@+id/button_gastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#9759EF"
        android:text="@string/gastos"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintLeft_toRightOf="@id/button_tablas"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastos_mensuales"
        android:textColor="#000000"
        android:textSize="35sp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gastos_ingresos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guideline1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:context=".Tablas_activity">

        <TextView
            android:id="@+id/textView_ingresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/ingresos"
            android:textColor="#5BA85B"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:text="@string/gastos_minusculas"
            android:textColor="#FD0000"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_ingresos" />

        <TextView
            android:id="@+id/textView_cantida_de_ingresos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:text="$118"
            android:textColor="#017F01"
            android:textSize="30sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView_ingresos"
            app:layout_constraintTop_toTopOf="@+id/textView_ingresos" />

        <TextView
            android:id="@+id/textView_cantida_de_gastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:text="$50"
            android:textColor="#FD0000"
            android:textSize="30sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_gastos" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_horizontal"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/gastos_ingresos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>